amani/themes/amani_zen/sass/components/_front-page-blocks.scss
/**
 * @file
 * Style for front page blocks.
 */

// three content blocks
.front-page-blocks {
  margin-bottom: 50px;
  text-align: center;

  .views-row {
    display: inline-block;
    text-align: center;
    width: 31%;
    margin: 0 1%;
    vertical-align: top;

    @media all and (max-width: $breakpoint) {
      background: url(../images/divid-line.png) no-repeat center bottom;
      width: 90%;
      padding: 10px 20px 70px;

      &.views-row-last {
        background: none;
        padding-bottom: 10px;
      }
    }
    @media all and (min-width: 960px) {
      padding-left: 3%;
      padding-right: 3%;
      height: 383px;
      position: relative;
    }

    .views-field-title {
      text-transform: uppercase;
      font-weight: 400;
      font-size: 1.5em;
      line-height: 1.2;
      font-family: $open-sans-condensed;
      margin-top: 15px;
      margin-bottom: 30px;
      //white-space: nowrap;
    }

    .views-field-field-text .field-content {
      line-height: 1.5;
    }
    
    .read_more_link {
      position: absolute;
      bottom: -20px;
      left: 0;
      right: 0;
      margin: 0 auto;
      @media all and (max-width: 768px) {
        bottom: -5px;
      }

      span {
        font-family: $open-sans-condensed;
        text-transform: uppercase;
        border: 2px solid $purple-dark;
        border-radius: 1px;
        padding: 3px 30px 4px;
        cursor: pointer;

        a {
          color: #333;
          font-size: 14px;

          .more-arrow {
            display: none;
          }
        }

        &:hover {
          background: #eee;
        }
      }
    }
  }
}

//
.page-home .contextual-links-region {
  position: initial;
}

// Twitter, Facebook, calendar blocks

#block-views-front-page-tweets-block,
#block-fb-likebox-0.block-fb-likebox,
#block-views-calendar-of-events-block-3 {
  display: inline-block;
  vertical-align: top;
  margin: 85px 20px 30px;
  width: 290px;
  height: 370px;
  text-align: left;
  
  @media all and (min-width: 991px) and (max-width: 1090px){
    margin-left: 10px;
    margin-right: 10px;
  }
  
  @media all and (max-width: 990px) {
    margin: 50px 0;
  }

  .view {
    padding: 10px;
  }
}


// facebook block
#block-fb-likebox-0.block-fb-likebox {
  iframe {
    height: 386.5px !important;
    min-height: 386.5px !important;
  }
}

@media all and (max-width: 990px) {
   #block-fb-likebox-0.block-fb-likebox {
     background-color: $purple;
     text-align: center;
     padding: 50px 0 70px;
     margin: 0;
     width: 100%;
     box-sizing: content-box;
   }
}

// background image block
.fb-twit-cal-bgimage {
  position: absolute;
  top: 456px;
  z-index: -10;
  margin-bottom: 100px;
  margin-right: -50%;
  margin-left: -50%;
  width: 200%;
  height: 500px;
  overflow: hidden;
  
  @media all and (max-width: 990px) {
    display: none;
  }

  img {
    height: auto !important;
    width: 100% !important;
  }

  @media all and (max-width: $breakpoint) {
    & {
      opacity: 0;
    }
  }
}

// Twitter block
#block-views-front-page-tweets-block {
  margin-left: 20px;
  font-family: $open-sans-condensed;
  min-height: 387px;
  height: 336px;
  
  @media all and (max-width: 1090px) {
     //margin-left: 10px;
  }

  @media all and (max-width: 920px) {
    background: #e5e5e5;
    width: 100%;
    padding-top: 50px;
    padding-bottom: 50px;
    margin: 0;
    box-sizing: content-box;
  }

  .home-page-twitter-block {
    text-transform: uppercase;
    background: rgba(0,0,0,0.4);
    padding: 16px;
    min-height: 385px;

    @media all and (max-width: 990px) {
       //width: 280px;
       width: 290px;
       margin: 0 auto;
     }

    .view-header {
      margin-bottom: 16.5px;
      color: white;
      font-size: 1.5em;
      letter-spacing: 2px;

      * {
        display: inline-block;
      }

      &::before {
        content: "";
        background: url("../images/icon-twitter.png") 100%;
        width: 24px;
        height: 24px;
        display: inline-block;
        vertical-align: middle;
        margin-right: 10px;
        margin-bottom: 5px;
      }
    }

    .view-content {
      height: 310px;
      overflow-y: auto;

      .views-row {
        color: white;
        margin-bottom: 20px;

        .views-field-text{
          display: block;
          letter-spacing: 1.2px;

          a {
            color: #ce9bc0;
            //color: #513e79;
          }
        }

        .views-field-created-time {
          font-size: 0.75em;
        }
      }
    }
  }
}

// Calendar Block
#block-views-calendar-of-events-block-3 {
  @media all and (max-width: 990px) {
    width: 100%;
    margin: 0;
  }
}

//News list
#block-views-news-and-events-block-1,
#block-views-news-and-events-block-2,
#block-views-news-and-events-block-3,
#block-views-news-and-events-block-4 {
  //text-align: left;
  margin-top: 80px;
  float: left;
  @media all and (max-width: $breakpoint) {
    margin-top: 40px;
  }

  h2 {
    font-size: 28px;
    font-family: $open-sans-condensed;
    margin-bottom: 50px;
    text-transform: uppercase;
    @media all and (max-width: $breakpoint) {
      margin-bottom: 40px;
    }
  }
}


@media all and (max-width: $breakpoint) {
  .front #block-views-news-and-events-block-1,
  .front #block-views-news-and-events-block-2,
  .front #block-views-news-and-events-block-3,
  .front #block-views-news-and-events-block-4 {
   padding: 0 30px;
 }
}

@media all and (max-width:480px) {
  .front #block-views-news-and-events-block-1,
  .front #block-views-news-and-events-block-2,
  .front #block-views-news-and-events-block-3,
  .front #block-views-news-and-events-block-4 {
   padding: 0 20px;
 }
}
.view-news-and-events {
  text-align: left;
  .views-row-odd {
    margin-right: 2%;
  }
  .views-row-even {
    margin-left: 2%;
    @media (max-width: 480px) {
      margin-left: 0;
    }
  }
  .views-row {
    width: 47%;
    margin-bottom: 20px;
    display: inline-block;
    vertical-align: top;

    @media all and (max-width: $breakpoint) {
      width: 100%;
      margin-left: 0;
    }

    .views-field-field-image {
      float: left;
      margin-right: 15px;
      margin-bottom: 20px;
      height: 160px;
      width: 210px;
      position: relative;
      @media all and (max-width: $breakpoint) {
        width: 160px;
        height: 120px;
      }
      
      @media all and (max-width: 480px) {
        width: 100%;
        height: auto;
        float: none;
        margin-right: 0;
      }

      img {
        @media all and (max-width: $breakpoint) {
          width: 160px;
          height: 120px;
        }
        @media all and (max-width: 480px) {
          width: 100%;
          height: auto;
          margin-left: -5x;
        }
      }
    }

    .views-field-body {
      display: table;
      margin-top: 15px;
    }

    .views-field-title {
      margin-bottom: 5px;
    }

    .views-field-title a {
      font-family: $open-sans-condensed;
      color: $purple-primary;
      font-size: 16px;
      font-weight: bold;
      text-transform: uppercase;
    }

    .views-field-title-1 a,
    .views-field-title-2 a,
    .views-field-title-3 a,
    .views-field-title-4 a {
      @include readmore;
      margin-left: 225px;
      @media all and (max-width: $breakpoint) {
        margin-left: 176px;
      }
      @media all and (max-width: 480px) {
        margin-left: 0;
      }
    }
  }
}

//Pagination
.pager {
  font-family: $open-sans-condensed;
  text-transform: uppercase;
  
  li {
    padding: 0;
    margin: 0 3px;
    &.pager-first,
    &.pager-previous,
    &.pager-next,
    &.pager-last {
      background-color: transparent;
      padding: 0 1em;
      
      @media (max-width: 480px) {
        padding: 0;
      }
    }
    &.pager-current {
      background-color: $voodoo-3;
      padding: 0 1em;
    }
  }
  a {
    color: $purple;
  }
  li.pager-item a {
    background-color: $melanie;
    padding: 0 1em;
  }
  li.pager-current {
    color: $white;
    font-weight: normal;
  }
}

//mobile version
@media (max-width: 640px) {
  .pager {
    li.pager-item a,
    li.pager-current {
      padding: 0 0.5em;
    }
    
    li.pager-first a,
    li.pager-previous a,
    li.pager-next a,
    li.pager-last a {
      position: relative;
      display: inline-block;
      font-size: 0;
      height: 20px;
      width: 15px;
      vertical-align: top;
      
      &:before {
        content: "\f100";
        font-family: amani-icons;
        font-size: 18px;
        width: 15px;
        height: 20px;
        position: absolute;
        left: 0;
        top: 0;
      }
    }
    li.pager-previous a:before {
      content: "\f104";
    }
    li.pager-next a:before {
      content: "\f105";
    }
    li.pager-last a:before {
      content: "\f101";
    }
  }
}
.view-news-and-events .pager {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid $grey-clear;
}

//Donate button
.front #block-bean-donate {
  position: fixed;
  top: 670px;
  right: 0;
  z-index: 999;
  
  @media (max-width: 1300px) {
    top: 620px;
  }
  
  @media (max-width: 1160px) {
    top: 550px;
  }
   
  @media (max-width: 960px) {
    top: 510px;
  }
  
  @media (max-width: 768px) {
    top: 310px;
  }
  
  .entity-bean a {
    @include btn;
    line-height: 30px;
    padding: 5px 50px;
    background: $purple-alt;
    box-shadow: 1px 3px 5px #ccc;
    
    @media (max-width: 768px) {
      padding: 5px 30px;
    }
  }
}

// carosel

.content_bottom {
  margin-bottom: 20px;
  
  .jcarousel-skin-default .jcarousel-container-horizontal {
    width: 448px;
    box-sizing: content-box;
    @media (max-width: 768px) {
      width: 232px;
    }
  }
  
  .jcarousel-skin-default .jcarousel-clip-horizontal {
    width: 448px;
    @media (max-width: 768px) {
      width: 232px;
    }
  }

  .jcarousel-skin-default .jcarousel-item-horizontal {
    margin: 0 8px 0 0;
  }
  
  .jcarousel-skin-default .jcarousel-item {
    position: relative;
    
    .views-field-field-image {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      left: 0;
      right: 0; 
      margin: 0 auto;
    }
  }
  .jcarousel-skin-default .jcarousel-next-horizontal {
    right: 4px;
  }
  .jcarousel-skin-default .jcarousel-prev-horizontal {
    left: 5px;
  }
}

